k8s/snort-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: suricata
  namespace: todo
  labels:
    app: suricata
spec:
  selector:
    matchLabels:
      name: suricata
  template:
    metadata:
      labels:
        name: suricata
    spec:
      hostNetwork: true
      hostPID: true
      containers:
        - name: suricata
          image: jasonish/suricata:latest
          securityContext:
            privileged: true
          args: ["-i", "eth0", "-c", "/etc/suricata/suricata.yaml", "--unix-socket"]
          volumeMounts:
            - name: suricata-rules
              mountPath: /etc/suricata
            - name: var-log
              mountPath: /var/log/suricata
      volumes:
        - name: suricata-rules
          configMap:
            name: suricata-config
        - name: var-log
          hostPath:
            path: /var/log/suricata
            type: DirectoryOrCreate
