k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # If using nginx-ingress with ModSecurity support you can add:
    # nginx.ingress.kubernetes.io/modsecurity-enabled: "true"
    # nginx.ingress.kubernetes.io/modsecurity-snippet: |
    #   SecRuleEngine On
spec:
  rules:
    - host: todo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: modsecurity-service
                port:
                  number: 80
